// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it passes a11y 1`] = `
<div>
  <div
    class="govuk-form-group lbh-form-group"
    id="test"
  >
    <label
      class="govuk-label lbh-label"
      for="test-field"
    >
      DateInput Test
      
    </label>
    <div
      class="govuk-date-input lbh-date-input"
      name="test"
    >
      <div
        class="govuk-date-input__item"
      >
        <label
          class="govuk-label lbh-label"
          for="test-field-day"
        >
          Day
        </label>
        <input
          aria-label="Day"
          aria-valuemax="31"
          aria-valuemin="1"
          class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
          name="day"
          role="spinbutton"
          value=""
        />
      </div>
      <div
        class="govuk-date-input__item"
      >
        <label
          class="govuk-label lbh-label"
          for="test-field-month"
        >
          Month
        </label>
        <input
          aria-label="Month"
          aria-valuemax="12"
          aria-valuemin="1"
          class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
          name="month"
          role="spinbutton"
          value=""
        />
      </div>
      <div
        class="govuk-date-input__item"
      >
        <label
          class="govuk-label lbh-label"
          for="test-field-year"
        >
          Year
        </label>
        <input
          aria-label="Year"
          class="govuk-input lbh-input govuk-input govuk-date-input__input govuk-input--width-4"
          name="year"
          role="spinbutton"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`it renders correctly 1`] = `
<div>
  <div
    class="govuk-date-input lbh-date-input"
  >
    <div
      class="govuk-date-input__item"
    >
      <label
        class="govuk-label lbh-label"
        for="date-input-day"
      >
        Day
      </label>
      <input
        aria-label="Day"
        aria-valuemax="31"
        aria-valuemin="1"
        class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
        name="day"
        role="spinbutton"
        value=""
      />
    </div>
    <div
      class="govuk-date-input__item"
    >
      <label
        class="govuk-label lbh-label"
        for="date-input-month"
      >
        Month
      </label>
      <input
        aria-label="Month"
        aria-valuemax="12"
        aria-valuemin="1"
        class="govuk-input lbh-input govuk-date-input__input govuk-input--width-2"
        name="month"
        role="spinbutton"
        value=""
      />
    </div>
    <div
      class="govuk-date-input__item"
    >
      <label
        class="govuk-label lbh-label"
        for="date-input-year"
      >
        Year
      </label>
      <input
        aria-label="Year"
        class="govuk-input lbh-input govuk-input govuk-date-input__input govuk-input--width-4"
        name="year"
        role="spinbutton"
        value=""
      />
    </div>
  </div>
</div>
`;
